# Generating-social-networks-utility-maximization

./: .gitattributes  .gitignore  CMakeConsts.h.in.h  CMakeLists.txt  README.md  Rshiny for function  SMS-Save-Edges.csv  SMS-Save-Utility.csv  SMSfunction.R  customlauchscript.sh  graph.html
DataViz/: Analyse.R  Function.R  GraphSMS.R  Media-Network-even-more-Dynamic.html  RenderGraph.R  ShinyFunction.R  Test.R  graph.html  sim.html
NewOutputs/250i-1000r/: SMS-Save-Clustering-1877747437.csv  SMS-Save-Clustering-1961481435.csv  SMS-Save-Clustering-2132813228.csv  SMS-Save-Clustering-2189700036.csv  SMS-Save-Clustering-2194138263.csv  SMS-Save-Utility-1877747437.csv  SMS-Save-Utility-1961481435.csv  SMS-Save-Utility-2132813228.csv  SMS-Save-Utility-2189700036.csv  SMS-Save-Utility-2194138263.csv  SMS-Save-Vertices-1877747437.csv  SMS-Save-Vertices-1961481435.csv  SMS-Save-Vertices-2132813228.csv  SMS-Save-Vertices-2189700036.csv  SMS-Save-Vertices-2194138263.csv
NewOutputs/250i-1000r (with P inequalities)/: SMS-Save-Clustering-2092377226.csv  SMS-Save-Clustering-2116075071.csv  SMS-Save-Clustering-2133920736.csv  SMS-Save-Clustering-2244904151.csv  SMS-Save-Clustering-2388888638.csv  SMS-Save-Utility-2092377226.csv  SMS-Save-Utility-2116075071.csv  SMS-Save-Utility-2133920736.csv  SMS-Save-Utility-2244904151.csv  SMS-Save-Utility-2388888638.csv  SMS-Save-Vertices-2092377226.csv  SMS-Save-Vertices-2116075071.csv  SMS-Save-Vertices-2133920736.csv  SMS-Save-Vertices-2244904151.csv  SMS-Save-Vertices-2388888638.csv
Outputs/: simulationProgram.csv
Outputs/1000r-20i (v3)/: SMS-Save-Edges.csv  SMS-Save-Utility.csv
Outputs/100i-500r/: SMS-Save-Clustering-257863699.csv  SMS-Save-Clustering-265868412.csv  SMS-Save-Clustering-267109444.csv  SMS-Save-Clustering-269838938.csv  SMS-Save-Clustering-275525565.csv  SMS-Save-Clustering-276597628.csv  SMS-Save-Clustering-284111566.csv  SMS-Save-Clustering-289895403.csv  SMS-Save-Clustering-291348106.csv  SMS-Save-Clustering-291916497.csv  SMS-Save-Edges-257863699.csv  SMS-Save-Edges-265868412.csv  SMS-Save-Edges-267109444.csv  SMS-Save-Edges-269838938.csv  SMS-Save-Edges-275525565.csv  SMS-Save-Edges-276597628.csv  SMS-Save-Edges-284111566.csv  SMS-Save-Edges-289895403.csv  SMS-Save-Edges-291348106.csv  SMS-Save-Edges-291916497.csv  SMS-Save-Utility-257863699.csv  SMS-Save-Utility-265868412.csv  SMS-Save-Utility-267109444.csv  SMS-Save-Utility-269838938.csv  SMS-Save-Utility-275525565.csv  SMS-Save-Utility-276597628.csv  SMS-Save-Utility-284111566.csv  SMS-Save-Utility-289895403.csv  SMS-Save-Utility-291348106.csv  SMS-Save-Utility-291916497.csv  SMS-Save-Vertices-257863699.csv  SMS-Save-Vertices-265868412.csv  SMS-Save-Vertices-267109444.csv  SMS-Save-Vertices-269838938.csv  SMS-Save-Vertices-275525565.csv  SMS-Save-Vertices-276597628.csv  SMS-Save-Vertices-284111566.csv  SMS-Save-Vertices-289895403.csv  SMS-Save-Vertices-291348106.csv  SMS-Save-Vertices-291916497.csv
Paper/: PaperMain.R  rebuildCompMatrix.R  utilsGraphs.R
SMS-Simulator/: .gitignore  CMakeConsts.h  CMakeConsts.h.in  Constants.hpp  Individual.cpp  Individual.hpp  OptimalMatrix.cpp  OptimalMatrix.hpp  SexualMarket.cpp  SexualMarket.hpp  SocialMatrix.cpp  SocialMatrix.hpp  UtilityFunction.cpp  UtilityFunction.hpp  main.cpp
Sexual Market Simulation/: .gitignore  Individal.cpp  Individal.hpp  Individual.cpp  Individual.hpp  Sexual Market Simulation.cpp  Sexual Market Simulation.sln  Sexual Market Simulation.vcxproj  Sexual Market Simulation.vcxproj.filters  SexualMarket.cpp  SexualMarket.hpp  main.cpp
(+4491 files in other folders)
